@@ -324,6 +324,9 @@ class WC_Stripe_Account {
 
 		update_option( WC_Stripe::STRIPE_GATEWAY_SETTINGS_OPTION_NAME, $settings );
 
+		// After reconfiguring webhooks, clear the webhook state.
+		WC_Stripe_Webhook_State::clear_state();
+
 		return $response;
 	}
 
